add new endpoint and fix response
